# csvTrim

./: .dockerignore  .gitignore  Dockerfile  README.md  csvStats.py  csvTrim.py  presets.json  pyproject.toml  setup_python_env.sh
.github/workflows/: docker-publish.yml  homebrew-publish.yml
csvtrim/: __main__.py  csvTrim.py
